--- a/Spoon.Standalone.Connector/Spoon.Standalone.Connector.csproj
+++ b/Spoon.Standalone.Connector/Spoon.Standalone.Connector.csproj
@@ -44,6 +44,12 @@
     <Compile Include="SnapshotManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="NuGet\readme.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="NuGet\Spoon.Standalone.Connector.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
