--- a/Spoon.Standalone/package.json
+++ b/Spoon.Standalone/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Spoon.Azure.WebJob",
-  "version": "0.0.0",
-  "description": "Spoon.Azure.WebJob",
+  "name": "Spoon.Standalone",
+  "version": "1.0.0",
+  "description": "Spoon.Standalone",
   "main": "run.js",
   "author": {
     "name": "Levi Botelho",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/LeviBotelho/spoon"
+    "url": "https://github.com/LeviBotelho/spoon-standalone"
   },
   "dependencies": {
     "phantomjs": "^1.9.7-1",
